# logic-lab

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FEATURE_IDEAS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  METABALLS_IMPLEMENTATION.md  README.md  glama.json  main.py  pyproject.toml
.agents/: README_FORMAT_GUIDE.md  art_manifest.json  art_manifest_baseline.json  post_write_hook.sh  settings.local.json  update_art_manifest.py
.agents/docs/: CLASSIFICATION.md  CLASSIFICATION_DOMAIN.md  INDEX.md  ORGANIZATION_SUMMARY.md  RESEARCH_TO_PHYSICS.md
.github/workflows/: release.yml  test.yml
cellular_automata/ca_1dim/: README.md
cellular_automata/ca_2dim/: README.md
cellular_automata/elementary_ca/: elementary_ca.py
cellular_automata/hex_lattice_ca/: hex_lattice_ca.py
cellular_automata/mod_pascal/: mod_pascal.py
fractals/branch_objects_animation/: README.md  branch_objects_animation.py
fractals/branch_thickness/: README.md
fractals/cantor_set/: README.md  cantor_set.py
fractals/elementary_wolfram_ca/: README.md  elementary_wolfram_ca.py
fractals/fractal_lines/: README.md  fractal_lines.py
fractals/game_of_life/: README.md  game_of_life.py
fractals/game_of_life_oop/: README.md
fractals/hexagon_ca/: README.md  hexagon_ca.py
fractals/koch_curve/: README.md  koch_curve.py
fractals/koch_deformation/: koch_deformation.py
fractals/koch_snowflake/: README.md  koch_snowflake.py
fractals/l_system/: README.md  l_system.py
fractals/l_system_string_only/: README.md  l_system_string_only.py
fractals/quadtree_part_1/: quadtree_part_1.py
fractals/recursion/: README.md  recursion.py
fractals/recursion_2/: README.md
fractals/recursion_circles/: README.md  recursion_circles.py
fractals/space_colonization/: README.md  space_colonization.py
fractals/stochastic_tree/: README.md  stochastic_tree.py
fractals/tree/: README.md  tree.py
genetic_algorithms/ga_shakespeare/: README.md
genetic_algorithms/ga_shakespeare_annotated/: README.md  ga_shakespeare_annotated.py
genetic_algorithms/interactive_selection/: README.md
genetic_algorithms/smart_rockets/: README.md  smart_rockets.py
genetic_algorithms/smart_rockets_basic/: README.md  smart_rockets_basic.py
mathematical/apollonian_gasket/: apollonian_gasket.py
mathematical/barycentric_coordinates/: README.md  barycentric_coordinates.py
mathematical/circle_packing/: README.md
mathematical/clifford_attractor/: README.md  clifford_attractor.py
mathematical/complex_domain_coloring/: README.md
mathematical/continued_fraction_div_rect/: continued_fraction_div_rect.py
mathematical/continued_fraction_div_rect_zoom/: README.md
mathematical/continued_fraction_div_square/: continued_fraction_div_square.py
mathematical/continued_fraction_gold_div_controls/: README.md  continued_fraction_gold_div_controls.py
mathematical/continued_fraction_recur_div_square/: continued_fraction_recur_div_square.py
mathematical/convex_hull/: README.md  convex_hull.py
mathematical/cubic_bezier/: README.md  cubic_bezier.py
mathematical/de_casteljau_subdivision/: README.md
mathematical/diamond_square/: diamond_square.py
mathematical/easing_functions/: README.md  easing_functions.py
mathematical/euclid_div_rect/: README.md
mathematical/euclid_div_rect_color/: README.md  euclid_div_rect_color.py
mathematical/euclid_div_square/: README.md  euclid_div_square.py
mathematical/euclid_div_square_recorder/: README.md
mathematical/euclid_numeric/: README.md
mathematical/euclid_rect_div_rect/: README.md  euclid_rect_div_rect.py
mathematical/euclid_recur_div_square/: README.md
mathematical/euclid_recur_div_square_controls/: README.md  euclid_recur_div_square_controls.py
mathematical/fermat_spiral/: README.md  fermat_spiral.py
mathematical/fermat_spiral_line/: README.md  fermat_spiral_line.py
mathematical/fibonacci_convergent/: README.md
mathematical/fibonacci_rect/: README.md  fibonacci_rect.py
mathematical/fibonacci_recur_div/: README.md  fibonacci_recur_div.py
mathematical/fibonacci_recur_div_controls/: README.md  fibonacci_recur_div_controls.py
mathematical/ford_circles/: README.md
mathematical/fourier_epicycles/: fourier_epicycles.py
mathematical/gold_fibo_spiral/: gold_fibo_spiral.py
mathematical/harmonograph/: harmonograph.py
mathematical/hilbert_curve/: hilbert_curve.py
mathematical/lissajous_curves/: README.md  lissajous_curves.py
mathematical/lloyd_relaxation/: lloyd_relaxation.py
mathematical/log_spiral/: README.md
mathematical/log_spiral_zoom/: README.md
mathematical/logistic_bifurcation/: README.md
mathematical/mandelbrot_julia/: README.md
mathematical/marching_squares/: README.md  marching_squares.py
mathematical/maurer_rose/: README.md
mathematical/modular_power_visual/: README.md
mathematical/modular_table/: README.md
mathematical/modular_table_visual/: README.md  modular_table_visual.py
mathematical/newton_fractal/: README.md  newton_fractal.py
mathematical/orbit_traps/: orbit_traps.py
mathematical/pen_pressure_curve/: README.md
mathematical/poisson_disk/: README.md  poisson_disk.py
mathematical/quadratic_bezier/: README.md  quadratic_bezier.py
mathematical/quasicrystal_interference/: README.md
mathematical/recur_polygon/: README.md  recur_polygon.py
mathematical/recur_square/: README.md
mathematical/recur_square_spiral/: README.md  recur_square_spiral.py
mathematical/signed_distance_field/: README.md  signed_distance_field.py
mathematical/spirograph_curves/: spirograph_curves.py
mathematical/superformula/: superformula.py
mathematical/ulam_spiral/: ulam_spiral.py
mathematical/voronoi/: README.md  (+1 more)
mcp/: README.md  logic_lab_server.py
tests/: __init__.py  conftest.py  test_audio_sync.py  test_mcp_server.py  test_metaball.py  test_metaballs_3d.py  test_physics2d.py  test_reaction_diffusion.py  test_swarm_intelligence.py  test_three_dimensional.py  test_update_art_manifest.py  test_voronoi.py  test_worley_noise.py
tiling_patterns/: deformation_helpers.py  pattern_helpers.py
(+1361 files in other folders)
