[project]
name = "logic-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.6",
    "mcp>=1.0.0",
    "numpy>=2.4.4",
    "py5>=0.10.9a1",
    "pymunk>=7.2.0",
    "neat-python==0.92",
    "networkx>=3.0",
    "matplotlib>=3.8.0",
    "gymnasium[mujoco,box2d]>=1.0.0",
    "mujoco>=3.1.0",
    "moviepy>=2.2.1",
]
